@@ -27,7 +27,7 @@ snmpEngine = engine.SnmpEngine()
 # SNMPv2c:
 
 # SecurityName <-> CommunityName mapping
-config.addV1System(snmpEngine, 'my-area', 'public')
+config.addV1System(snmpEngine, 'my-area', 'public', transportTag='all-my-managers')
 
 # Specify security settings per SecurityName (SNMPv2c -> 1)
 config.addTargetParams(snmpEngine, 'my-creds-1', 'my-area', 'noAuthNoPriv', 1)
