@@ -21,8 +21,9 @@ from pysnmp.proto.api import v2c
 # Create SNMP engine instance
 snmpEngine = engine.SnmpEngine()
 
-# SecurityName <-> CommunityName mapping
-config.addV1System(snmpEngine, 'my-area', 'public')
+# SecurityName <-> CommunityName mapping (+ transport binding)
+config.addV1System(snmpEngine, 'my-area', 'public', 
+                   transportTag='all-my-managers')
 
 # Specify security settings per SecurityName (SNMPv2c -> 1)
 config.addTargetParams(snmpEngine, 'my-creds', 'my-area', 'noAuthNoPriv', 1)
