@@ -66,7 +66,7 @@ mibInstrumCtl.mibBuilder.exportSymbols(
 #
 
 # SecurityName <-> CommunityName mapping
-config.addV1System(snmpEngine, 'my-area', 'public')
+config.addV1System(snmpEngine, 'my-area', 'public', transportTag='all-my-managers')
 
 # Specify security settings per SecurityName (SNMPv2c -> 1)
 config.addTargetParams(snmpEngine, 'my-creds', 'my-area', 'noAuthNoPriv', 1)
