@@ -24,6 +24,11 @@ Revision 4.2.5rc1
   can't easily stop doing that.
 - The snmpCommunityTable row selection improved to follow RFC2576, clause
   5.2.1.
+- Fix and significant logic rework of snmpCommunityTable to make it working
+  in both Generator and Responder modes and better follow RFC2576 
+  requirements on sequential entries lookup and selection. As a side effect,
+  untagged snmpCommunityTable entries will *not* match tagged 
+  snmpTargetAddrTable entries and vice versa.
 - Fix to Twisted-based NotificationOriginator to make it serving INFORMs again.
 - Fix to rfc2576.v1tov2() logic: errorStatus = noSuchName is now translated
   into rfc1905.noSuchObject exception value for *all* var-bindings. Although
